further styling of left pokedex side

--- a/helpers/sizing.scss
+++ b/helpers/sizing.scss
@@ -2,6 +2,10 @@ $xxs: 15px;
 $xs: 30px;
 $small: 60px;
 $medium: 120px;
-$medium-extra: 240px;
+$medium-extra: 180px;
+$largish: 240px;
 $large: 300px;
 $xl: 600px;
+
+$contour: 1px solid black;
+$bigcontour: 2px solid black;
