--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@
   font-style: normal;
 }
 
+#pokedex #left-part #poke-number, #pokedex #left-part #poke-number h2, #pokedex #right-part #search input, #pokedex #right-part #info {
+  font-family: "pokemon_gbregular", sans-serif;
+  font-size: 10px;
+  letter-spacing: 0.2em;
+  line-height: 2em;
+}
+
 /*---------------------------------------------------
 --------------------MAIN RESET-----------------------
 ---------------------------------------------------*/
@@ -141,15 +148,39 @@ body {
   width: 70%;
   max-width: 240px;
   border-radius: 5px;
+  text-align: center;
+}
+
+#pokedex #left-part #screen #display #displayImage {
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 #pokedex #left-part #poke-number {
   background: white;
   border: 15px solid #3B4CCA;
+  position: relative;
   border-radius: 5px;
   height: 60px;
   width: 120px;
   margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#pokedex #left-part #poke-number h2 {
+  font-size: 9px;
+  position: absolute;
+  color: white;
+  top: -15px;
 }
 
 #pokedex #right-part {
@@ -197,8 +228,6 @@ body {
   border: 1px solid black;
   -ms-flex-preferred-size: 30px;
       flex-basis: 30px;
-  font-family: "pokemon_gbregular", sans-serif;
-  font-size: 10px;
 }
 
 #pokedex #right-part #search input[type=button] {
@@ -228,10 +257,9 @@ body {
   border-radius: 5px;
   margin: 0 auto;
   margin-top: 15px;
-  padding: 5px;
+  padding: 15px;
   color: black;
-  font-family: "pokemon_gbregular", sans-serif;
-  font-size: 10px;
+  overflow: scroll;
 }
 
 @media screen and (min-width: 960px) {
@@ -248,9 +276,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 #pokedex #right-part #info div#name {
@@ -259,6 +287,11 @@ body {
 }
 
 #pokedex #right-part #info div#moves {
+  padding-top: 15px;
   height: calc(100% - 30px);
+}
+
+#pokedex #right-part #info div#moves li {
+  list-style: none;
 }
 /*# sourceMappingURL=styles.css.map */
