--- a/styles.scss
+++ b/styles.scss
@@ -97,16 +97,35 @@ body {
                 width: 70%;
                 max-width: $largish;
                 border-radius: 5px;
+                text-align: center;
+
+                #displayImage {
+                    height: 100%;
+                    object-fit: contain;
+                }
             }
         }
 
         #poke-number {
             background: white;
             border: $xxs solid $blue;
+            position: relative;
             border-radius: 5px;
             height: $small;
             width: $medium;
             margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            @extend %text-props;
+
+            h2 {
+                @extend %text-props;
+                font-size: 9px;
+                position: absolute;
+                color: white;
+                top: -$xxs;
+            }
         }
     }
 
@@ -139,11 +158,7 @@ body {
                 border-radius: 5px;
                 border: $contour;
                 flex-basis: $xs;
-
-                font: {
-                    family: $text;
-                    size: 10px;
-                }
+                @extend %text-props;
 
                 &[type=button]{
                     background: $blue;
@@ -171,13 +186,10 @@ body {
             border-radius: 5px;
             margin: 0 auto;
             margin-top: $xxs;
-            padding: 5px;
+            padding: $xxs;
             color: black;
-
-            font: {
-                family: $text;
-                size: 10px;
-            }
+            overflow: scroll;
+            @extend %text-props;
 
             @media screen and (min-width:960px){
                 height: $medium-extra;
@@ -186,7 +198,7 @@ body {
             div {
                 display: flex;
                 flex-direction: row;
-                align-items: center;
+                align-items: flex-start;
 
                 &#name {
                     height: $xs;
@@ -194,7 +206,12 @@ body {
                 }
 
                 &#moves {
+                    padding-top: $xxs;
                     height: calc(100% - 30px);
+
+                    li {
+                        list-style: none;
+                    }
                 }
             }
             
