--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ body {
   #pokedex #left-part {
     width: 50%;
     height: 100%;
+    padding: 0;
     border-right: 1px solid black;
     border-bottom: none;
   }
@@ -181,6 +182,14 @@ body {
   position: absolute;
   color: white;
   top: -15px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+#pokedex #left-part canvas {
+  width: 100%;
+  height: 100px;
 }
 
 #pokedex #right-part {
@@ -228,6 +237,7 @@ body {
   border: 1px solid black;
   -ms-flex-preferred-size: 30px;
       flex-basis: 30px;
+  text-transform: uppercase;
 }
 
 #pokedex #right-part #search input[type=button] {
@@ -283,7 +293,6 @@ body {
 
 #pokedex #right-part #info div#name {
   height: 30px;
-  border-bottom: 1px solid black;
 }
 
 #pokedex #right-part #info div#moves {
