--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,15 @@
 }
 
 html, body {
-  height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 960px) {
+  html, body {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
 
 /*---------------------------------------------------
@@ -71,12 +77,13 @@ body {
 }
 
 #pokedex {
-  background: #CC0000;
+  background: -webkit-gradient(linear, left bottom, left top, from(#cc0000), to(red));
+  background: linear-gradient(0deg, #cc0000 0%, red 100%);
   border: 2px solid black;
   border-radius: 10px;
   height: 70%;
   width: 70%;
-  margin: auto;
+  margin: 30px auto;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,9 +124,67 @@ body {
   #pokedex #left-part {
     width: 50%;
     height: 100%;
-    padding: 0;
     border-right: 1px solid black;
     border-bottom: none;
+  }
+}
+
+#pokedex #left-part #buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 15px;
+  border-bottom: none;
+}
+
+#pokedex #left-part #buttons .circle {
+  height: 60px;
+  width: 60px;
+  border: 1px solid black;
+  margin-right: 7.5px;
+  border-radius: 50%;
+  background: #C9C9C9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#pokedex #left-part #buttons .circle.medium {
+  margin-right: 0;
+  height: 80%;
+  width: 80%;
+}
+
+#pokedex #left-part #buttons .circle.medium#blue {
+  background: #00FFFF;
+}
+
+#pokedex #left-part #buttons .circle.small {
+  width: 15px;
+  height: 15px;
+}
+
+#pokedex #left-part #buttons .circle#red {
+  background: #CC0000;
+}
+
+#pokedex #left-part #buttons .circle#yellow {
+  background: #FFDE00;
+}
+
+#pokedex #left-part #buttons .circle#green {
+  background: #66F464;
+}
+
+@media screen and (min-width: 960px) {
+  #pokedex #left-part #buttons {
+    border-bottom: 1px solid black;
   }
 }
 
@@ -165,7 +230,7 @@ body {
   border-radius: 5px;
   height: 60px;
   width: 120px;
-  margin: auto;
+  margin: 15px auto 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -185,11 +250,6 @@ body {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-}
-
-#pokedex #left-part canvas {
-  width: 100%;
-  height: 100px;
 }
 
 #pokedex #right-part {
@@ -289,6 +349,7 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  max-height: 240px;
 }
 
 #pokedex #right-part #info div#name {
