--- a/styles.scss
+++ b/styles.scss
@@ -15,9 +15,13 @@
 }
 
 html,body {
-    height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
+
+    @media screen and (min-width: 960px){
+        height: 100vh;
+        overflow: hidden;
+    }
 }
 
 /*---------------------------------------------------
@@ -48,12 +52,12 @@ body {
 }
 
 #pokedex {
-    background: $red;
+    background: linear-gradient(0deg, rgba(204,0,0,1) 0%, rgba(255,0,0,1) 100%);
     border: $bigcontour;
     border-radius: 10px;
     height: 70%;
     width: 70%;
-    margin: auto;
+    margin: $xs auto;
     position: relative;
     display:flex;
     flex-direction: column;
@@ -74,9 +78,55 @@ body {
         @media screen and (min-width:960px){
             width: 50%;
             height: 100%;
-            padding: 0;
             border-right: $contour;
             border-bottom: none;
+        }
+
+        #buttons {
+            display: flex;
+            padding-bottom: $xxs;
+            border-bottom: none;
+
+            .circle {
+                height: $small;
+                width: $small;
+                border: $contour;
+                margin-right: $xxs/2;
+                border-radius: 50%;
+                background: $grey;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &.medium {
+                    margin-right: 0;
+                    height: 80%;
+                    width: 80%;
+                    
+                    &#blue {
+                        background: $aqua; 
+                    }
+                }
+
+                &.small {
+                    width: $xxs;
+                    height: $xxs;
+                }
+
+                &#red {
+                    background: $red;
+                }
+                &#yellow {
+                    background: $yellow;
+                }
+                &#green {
+                    background: $green;
+                }
+            }
+
+            @media screen and (min-width:960px){
+                border-bottom: $contour;
+            }
         }
 
         #screen {
@@ -114,7 +164,7 @@ body {
             border-radius: 5px;
             height: $small;
             width: $medium;
-            margin: auto;
+            margin: $xxs auto 0 auto;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -129,11 +179,6 @@ body {
                 left: 50%;
                 transform: translateX(-50%);
             }
-        }
-
-        canvas {
-            width: 100%;
-            height: 100px;
         }
     }
 
@@ -209,6 +254,7 @@ body {
                 display: flex;
                 flex-direction: row;
                 align-items: flex-start;
+                max-height: $largish;
 
                 &#name {
                     height: $xs;
