change ttf to otf

--- a/helpers/fonts.scss
+++ b/helpers/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'pokemon_gbregular';
-    src: url("./fonts/pokemon_GB.ttf") format("truetype"),;
+    src: url("./fonts/pokemon_GB.otf") format("opentype"),;
     font-weight: normal;
     font-style: normal;
 
