--- a/helpers/fonts.css
+++ b/helpers/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'pokemon_gbregular';
-  src: url("./fonts/pokemon_GB.otf") format("opentype");
+  src: url("./fonts/pokemon_GB.woff2") format("woff2"), url("./fonts/pokemon_GB.woff") format("woff"), url("./fonts/pokemon_GB.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'pocket_monkregular';
-  src: url("./fonts/Pocket_Monk.otf") format("opentype");
+  src: url("./fonts/Pocket_Monk.woff2") format("woff2"), url("./fonts/Pocket_Monk.woff") format("woff"), url("./fonts/Pocket_Monk.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
