--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,7 @@ body {
     -webkit-box-flex: 2;
         -ms-flex-positive: 2;
             flex-grow: 2;
-    text-align: left !important;
+    text-align: left;
   }
 }
 
