--- a/styles.scss
+++ b/styles.scss
@@ -275,7 +275,7 @@ body {
 
                     &[type=text]{
                         flex-grow: 2;
-                        text-align: left !important;
+                        text-align: left;
                     }
                 }
             }
