--- a/helpers/fonts.scss
+++ b/helpers/fonts.scss
@@ -3,7 +3,7 @@
     src: 
         url("./fonts/pokemon_GB.woff2") format("woff2"),
         url("./fonts/pokemon_GB.woff") format("woff"),
-        url("./fonts/pokemon_GB.ttf") format("truetype"),;
+        url("./fonts/pokemon_GB.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 
