--- a/helpers/fonts.scss
+++ b/helpers/fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'pokemon_gbregular';
     src: 
-        url("./fonts/pokemon_GB.woff2") format("woff2"),
-        url("./fonts/pokemon_GB.woff") format("woff"),
-        url("./fonts/pokemon_GB.ttf") format("truetype");
+        url("./fonts/Pokemon_GB.woff2") format("woff2"),
+        url("./fonts/Pokemon_GB.woff") format("woff"),
+        url("./fonts/Pokemon_GB.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 
